// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Dropload download URL 1`] = `
[
  {
    "format": "hls",
    "label": "Dropload",
    "meta": {
      "bytes": 333027737,
      "extractorId": "dropload",
      "height": 720,
      "title": "[~Squid~Game~EnG~]~S03E01~720p~WebRip ~❤️GLD❤️~",
    },
    "ttl": 10800000,
    "url": "https://srv29.dropload.io/hls2/01/00305/xhcmgcc2txnv_h/master.m3u8?t=MBKiIoVlA42YcZEixT7ZR1xJA5qKhcKgBi84GPmyT7U&s=1752613129&e=14400&f=1526758&i=0.0&sp=0&ii=130.61.236.204",
  },
]
`;

exports[`Dropload dropload unknown height and size 1`] = `
[
  {
    "format": "hls",
    "label": "Dropload",
    "meta": {
      "extractorId": "dropload",
      "height": 800,
      "title": "The Lost Bus 2025 1080p WEBRip x265",
    },
    "ttl": 10800000,
    "url": "https://ds16.dropcdn.io/hls2/02/00314/gf2apij3ql37_h/master.m3u8?t=jq0VCV2dOyLIIH07IGIpzruCXvbfdVqzGLWfMeo00AM&s=1759845990&e=14400&f=1571895&srv=ds3&i=0.0&sp=0&ii=2.184.0.222&p1=ds3&p2=ds3",
  },
]
`;

exports[`Dropload dropload.io 1`] = `
[
  {
    "format": "hls",
    "label": "Dropload",
    "meta": {
      "bytes": 1395864371,
      "extractorId": "dropload",
      "height": 1080,
      "title": "des-teufels-bad-2024",
    },
    "ttl": 10800000,
    "url": "https://srv34.dropload.io/hls2/01/00197/lyo2h1snpe5c_h/master.m3u8?t=ESjD9Le53ttKN2JPyxrhLUqTebDZvx3vcQUlNgP6Vko&s=1749845553&e=14400&f=987607&srv=srv27&i=0.0&sp=0&ii=50.99.15.93&p1=srv27&p2=srv27",
  },
]
`;

exports[`Dropload file not found 1`] = `[]`;

exports[`Dropload processing / internal problem 1`] = `[]`;
